--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-draggable-resizable": "^2.3.0"
   }
 }
