--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "v-body-scroll-lock": "^1.1.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
