--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "debounce": "^1.2.0",
+    "firebase": "^8.2.9",
     "v-body-scroll-lock": "^1.1.3",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue-textarea-autogrow-directive": "^0.1.7",
+    "vuefire": "^2.2.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
