--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "v-body-scroll-lock": "^1.1.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-smooth-scrollbar": "^0.1.2",
     "vue-textarea-autogrow-directive": "^0.1.7",
     "vuefire": "^2.2.5"
   },
