discord webhook added
firestore taking an indefinite leave

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules
 /dist
+twitter_keys.txt
 
 
 # local env files
@@ -21,3 +22,5 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+dist.zip
+src/store/keys.js
