--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debounce": "^1.2.0",
     "firebase": "^8.2.9",
     "v-body-scroll-lock": "^1.1.3",
+    "v-tooltip": "^2.1.3",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vue-smooth-scrollbar": "^0.1.2",
@@ -25,4 +26,3 @@
     "sass-loader": "^8.0.2"
   }
 }
-
