--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
       run: |
         yarn install
         yarn build
+      env:
+          CI: true
+          VUE_APP_DISCORD_WEBHOOK_LINK: ${{ secrets.VUE_APP_DISCORD_WEBHOOK_LINK }}
+          VUE_APP_FIREBASE_CONFIG_OBJECT: ${{ secrets.VUE_APP_FIREBASE_CONFIG_OBJECT }}
     
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
