--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "firebase": "^8.2.9",
     "v-body-scroll-lock": "^1.1.3",
     "v-tooltip": "^2.1.3",
+    "v-viewer": "^3.0.9",
     "vue": "^3.0.0",
-    "vue-image-previewer": "^0.1.4",
+    "vue-expandable-image": "^0.1.0",
     "vue-router": "^4.0.0-0",
     "vue-smooth-scrollbar": "^0.1.2",
     "vue-textarea-autogrow-directive": "^0.1.7"
