--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode=development",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -11,6 +11,7 @@
     "d3-timer": "^3.0.1",
     "debounce": "^1.2.0",
     "firebase": "^8.2.9",
+    "object-hash": "^2.2.0",
     "v-body-scroll-lock": "^1.1.3",
     "v-tooltip": "^2.1.3",
     "v-viewer": "^3.0.9",
