--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@prismicio/client": "^5.1.0",
     "core-js": "^3.6.5",
     "d3-timer": "^3.0.1",
     "debounce": "^1.2.0",
     "firebase": "^8.2.9",
     "object-hash": "^2.2.0",
+    "prismic-dom": "^2.2.6",
     "v-body-scroll-lock": "^1.1.3",
     "v-tooltip": "^2.1.3",
     "v-viewer": "^3.0.9",
