--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^8.2.9",
     "object-hash": "^2.2.0",
     "prismic-dom": "^2.2.6",
+    "unique-names-generator": "^4.6.0",
     "v-body-scroll-lock": "^1.1.3",
     "v-tooltip": "^2.1.3",
     "v-viewer": "^3.0.9",
