--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debounce": "^1.2.0",
     "firebase": "^8.2.9",
     "object-hash": "^2.2.0",
+    "p5": "^1.4.0",
     "prismic-dom": "^2.2.6",
     "unique-names-generator": "^4.6.0",
     "v-body-scroll-lock": "^1.1.3",
@@ -21,6 +22,7 @@
     "v-viewer": "^3.0.9",
     "vue": "^3.0.0",
     "vue-expandable-image": "^0.1.0",
+    "vue-p5": "^0.8.4",
     "vue-router": "^4.0.0-0",
     "vue-smooth-scrollbar": "^0.1.2",
     "vue-textarea-autogrow-directive": "^0.1.7"
