--- a/.github/workflows/deploy_hosting.yml
+++ b/.github/workflows/deploy_hosting.yml
@@ -25,7 +25,7 @@ jobs:
     - name: 📂 Sync files
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        server: ftp.jbtechlab.com
+        server: ftp.kaustubh.app
         username: ${{ secrets.FTP_USERNAME }}
         password: ${{ secrets.FTP_PASSWORD }}
         local-dir: ./dist/
